--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>HP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
 
  <link rel="stylesheet" href="style.css" type="text/css">
  </head>
@@ -18,6 +17,13 @@
   <header>
 
   </header>
+
+ <nav> 
+  <ul> 
+   <li><a href="index.html">HOME</a> </li>
+   <li><a href="https://be11be11.github.io/HP--/">予約フォーム</a> </li>
+  </ul>
+ </nav>   
 
  <main>  
 
@@ -51,12 +57,10 @@ padding: 10px;
   
   </section>
   </main>
- 
   <footer>
   
   </footer>
 
 
  </body>
- 
  </html>
