--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div> 
 
 <div class="box">
-   <div class="b box">
+   <div class="c box">
       <p>jpg 店内 image 3.JPG </p>    
    </div> 
 </div> 
