--- a/index.html
+++ b/index.html
@@ -27,39 +27,41 @@
     </div>
     
 <div class="box">
-<p>jpg 店内 image 2.JPG</p>
-</div>
+       <div class="a box">
+           <p>店内　2 </p>    
+       </div> 
+</div> 
 
     <div class="box">
               <div class="1 box">
-              <p>jpg ヘアカタログ 1.JP</p>    
+              　　<p>ヘア 1</p>    
               </div>         
          <div class="2 box">
-         <p>jpg ヘアカタログ 2.JP</p>    
+         　　<p>ヘア 2</p>    
          </div>          
-    <div class="3 box">
-    <p>jpg ヘアカタログ 3.JP</p>    
-    </div>          
+    　　　　　<div class="3 box">
+    　　　　　　　<p>ヘア 3</p>    
+   　　　　　 </div>          
          <div class="4 box">
-         <p>jpg ヘアカタログ 4.JP</p>    
+         　　<p>ヘア 4</p>    
          </div> 
     </div> 
 
 <div class="box">
        <div class="a box">
-           <p>jpg メニュー image </p>    
+           <p>メニュー</p>    
        </div> 
 </div> 
 
     <div class="box">
        <div class="b box">
-           <p>jpg emiko image 1.JPG </p>    
+           <p>emiko</p>    
        </div> 
     </div> 
 
 <div class="box">
    <div class="c box">
-      <p>jpg 店内 image 3.JPG </p>    
+      <p>店内 3</p>    
    </div> 
 </div> 
          
