--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
     </div>
     
 <div class="box">
-       <div class="a box">
+       <div class="abox">
            <p>店内　2 </p>    
        </div> 
 </div> 
 
     <div class="box">
-              <div class="1 box">
+              <div class="onebox">
               　　<p>ヘア 1</p>    
               </div>         
-         <div class="2 box">
+         <div class="2box">
          　　<p>ヘア 2</p>    
          </div>          
-    　　　　　<div class="3 box">
+    　　　　　<div class="Threebox">
     　　　　　　　<p>ヘア 3</p>    
    　　　　　 </div>          
-         <div class="4 box">
+         <div class="Fourbox">
          　　<p>ヘア 4</p>    
          </div> 
     </div> 
 
 <div class="box">
-       <div class="a box">
+       <div class="bbox">
            <p>メニュー</p>    
-       </div> 
+       </div>
 </div> 
 
     <div class="box">
-       <div class="b box">
+       <div class="cbox">
            <p>emiko</p>    
        </div> 
     </div> 
 
 <div class="box">
-   <div class="c box">
+   <div class="dbox">
       <p>店内 3</p>    
    </div> 
 </div> 
