--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        </div> 
 </div> 
 
-    <div class="catalog　box">
+    <div class="wrapper">
               <div class="onebox">
               　　<p>ヘア 1</p>    
               </div>         
