--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="onebox">
               　　<p>ヘア 1</p>    
               </div>         
-         <div class="2box">
+         <div class="Twobox">
          　　<p>ヘア 2</p>    
          </div>          
     　　　　　<div class="Threebox">
