--- a/index.html
+++ b/index.html
@@ -32,20 +32,28 @@
        </div> 
 </div> 
 
-    <div class="wrapper">
+  <div class="wrapper">
+       <div class="wrapper a">
               <div class="onebox">
               　　<p>ヘア 1</p>    
-              </div>         
-         <div class="Twobox">
+              </div>
+        </div>
+      <div class="wrapper b">
+             <div class="Twobox">
          　　<p>ヘア 2</p>    
-         </div>          
+           </div>  
+       </div>
+        <div class="wrapper a">
     　　　　　<div class="Threebox">
     　　　　　　　<p>ヘア 3</p>    
-   　　　　　 </div>          
+   　　　　　 </div>
+         </div>
+      <div class="wrapper b">
          <div class="Fourbox">
          　　<p>ヘア 4</p>    
          </div> 
-    </div> 
+      </div>
+  </div> 
 
 <div class="box">
        <div class="bbox">
