--- a/index.html
+++ b/index.html
@@ -31,30 +31,16 @@
            <p>店内　2 </p>    
        </div> 
 </div> 
-
-  <div class="wrapper">
-       <div class="wrapper a">
-              <div class="onebox">
+  
+<div class="box">
+  <div class="uebox">
               　　<p>ヘア 1</p>    
-              </div>
         </div>
-      <div class="wrapper b">
-             <div class="Twobox">
-         　　<p>ヘア 2</p>    
-           </div>  
-       </div>
-        <div class="wrapper a">
-    　　　　　<div class="Threebox">
-    　　　　　　　<p>ヘア 3</p>    
-   　　　　　 </div>
-         </div>
-      <div class="wrapper b">
-         <div class="Fourbox">
-         　　<p>ヘア 4</p>    
-         </div> 
-      </div>
-  </div> 
-
+     <div class="sitabox">
+              　　<p>ヘア 2</p>    
+        </div>
+  </div>
+  
 <div class="box">
        <div class="bbox">
            <p>メニュー</p>    
