--- a/index.html
+++ b/index.html
@@ -31,16 +31,29 @@
            <p>店内　2 </p>    
        </div> 
 </div> 
+
   
 <div class="box">
-  <div class="uebox">
-              　　<p>ヘア 1</p>    
+    <div class="Ue flexbox">   
+       <div class="ue flexbox">
+          <div class="Onebox">
+          </div>
+          <div class="Threebox">
+          </div>
+       </div>
+    </div>
+ 
+   <div class="Sita flexbox">
+      <div class="sita flexbox">
+        <div class="Twobox">
         </div>
-     <div class="sitabox">
-              　　<p>ヘア 2</p>    
+        <div class="Fourbox">
         </div>
-  </div>
-  
+      </div>
+   </div>
+</div>
+
+
 <div class="box">
        <div class="bbox">
            <p>メニュー</p>    
