--- a/index.html
+++ b/index.html
@@ -33,24 +33,19 @@
 </div> 
 
   
-<div class="box">
-    <div class="Ue flexbox">   
-       <div class="ue flexbox">
-          <div class="Onebox">
-          </div>
-          <div class="Threebox">
-          </div>
-       </div>
-    </div>
- 
-   <div class="Sita flexbox">
-      <div class="sita flexbox">
-        <div class="Twobox">
-        </div>
-        <div class="Fourbox">
-        </div>
-      </div>
-   </div>
+<div class="wrapper">
+     <div class="Ue flexbox">   
+           <div class="ue flexbox">
+               <div class="Onebox">1</div>
+               <div class="Threebox">3</div>
+           </div>
+      </div> 
+      <div class="Sita flexbox">
+           <div class="sita flexbox">
+               <div class="Twobox">2</div>
+               <div class="Fourbox">4</div>
+           </div>
+     </div>
 </div>
 
 
