--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                <div class="Threebox">3</div>
            </div>
       </div> 
+</div> 
+
+<div class="wrapper">
       <div class="Sita flexbox">
            <div class="sita flexbox">
                <div class="Twobox">2</div>
