--- a/index.html
+++ b/index.html
@@ -36,17 +36,12 @@
 <div class="wrapper">
      <div class="Ue flexbox">   
            <div class="ue flexbox">
-               <div class="Onebox">1</div>
-               <div class="Threebox">3</div>
+               <div class="Onebox">1</div> <div class="Threebox">3</div>
            </div>
       </div> 
-</div> 
-
-<div class="wrapper">
       <div class="Sita flexbox">
            <div class="sita flexbox">
-               <div class="Twobox">2</div>
-               <div class="Fourbox">4</div>
+               <div class="Twobox">2</div> <div class="Fourbox">4</div>
            </div>
      </div>
 </div>
