--- a/index.html
+++ b/index.html
@@ -33,17 +33,11 @@
 </div> 
 
   
-<div class="wrapper">
-     <div class="Ue flexbox">   
-           <div class="ue flexbox">
-               <div class="Onebox">1</div> <div class="Threebox">3</div>
-           </div>
-      </div> 
-      <div class="Sita flexbox">
-           <div class="sita flexbox">
-               <div class="Twobox">2</div> <div class="Fourbox">4</div>
-           </div>
-     </div>
+<div class="box">
+  <img src="jpg ヘアカタログ 4.jpg" alt="" class="ヘア1">
+  <img src="jpg ヘアカタログ 2.jpg" alt="" class="ヘア2">
+  <img src="jpg ヘアカタログ 3.JPG" alt="" class="ヘア3">
+  <img src="jpg ヘアカタログ 1.JPG" alt="" class="ヘア4">
 </div>
 
 
