--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 
 <div class="main1">
 タイトルなど
-<div class="box2"> <div class="box3"> <img src="jpg 店内 image 1.JPG" alt="" class="店内1"> </div> </div>
+
+<div class="bar">
+<p>home</p>
+ <p>menu</p>
+ <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUgAONaPGqIKhEIiPdX-fL2kytpq0salo2ooMCIvT8R2dfyw/viewform">web予約</a></p>
+</div>  
+ 
+<div class="box2"> 
+
+<div class="box3"> <img src="jpg 店内 image 1.JPG" alt="" class="店内1"> </div> 
+ 
+</div>
+
 <div class="box2"> 
   <p class="text4">    
      住所
@@ -22,10 +34,12 @@
      <br>〇〇〇〇-〇〇〇〇
      <br>営業時間
      <br>平日11:00-20:30　土・日・祝10：00-20：00
-     <br>WEB予約
+   　<br>定休日　月曜日　
+     <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUgAONaPGqIKhEIiPdX-fL2kytpq0salo2ooMCIvT8R2dfyw/viewform">web予約</a>
      </p>
 <div class="box5"> <img src="jpg 店内 image 2.JPG" alt="" class="店内2"> </div> 
 </div>
+ 
 <div class="box2"> 
 <div class="box6"> <img src="jpg ヘアカタログ 4.jpg" alt="" class="ヘア1"> <img src="jpg ヘアカタログ 2.jpg" alt="" class="ヘア2"> <img src="jpg ヘアカタログ 3.JPG" alt="" class="ヘア3"> <img src="jpg ヘアカタログ 1.JPG" alt="" class="ヘア4"> </div>
 </div>
@@ -47,11 +61,16 @@
        <br>お客様お一人お一人に合わせたシルエットをご提案します
      </p> 
 </div>
-<div class="box2"> <div class="box11"> <img src="jpg 店内 image 3.JPG" alt="" class="店内3"></div> 
+<div class="box2"> 
+ <div class="box13"> <a href="https://www.instagram.com/" class="sns1"><img src="PNGInstagram1.png" alt=" class="sns1"></a> </div> 
+  <div class="box14"> <a href="https://www.instagram.com/" class="sns2"><img src="PNGLINE1.png" alt=" class="sns2"></a> </div>  
+  <div class="box11"> <img src="jpg 店内 image 3.JPG" alt="" class="店内3"> </div> 
 <p class="text12">RECRUIT</p> 
 </div>     
 
+
 </div>
+
          
   </body>
 
