--- a/index.html
+++ b/index.html
@@ -10,60 +10,74 @@
 
  <body>
 
-<div class="祖"> 
- 　　　<div class="親1"> 
- 　　　　　　<div class="店内1"> <img src="jpg 店内 image 1.JPG" alt="" class="店内1"> </div>
-　　　</div>
+<div class="祖">
+ 　　           <div class="bar">
+                                 <p><a href="https://be11be11.github.io/HP-5/">top</a></p>
+                                 <p><a href="#menu">menu</a></p>
+                                 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUgAONaPGqIKhEIiPdX-fL2kytpq0salo2ooMCIvT8R2dfyw/viewform">web予約</a></p>
+                </div>  
 
-    　<div class="親2"> 
- 　　　　　　<div class="text1">
-                 住所
-                 <br>東京都中央区銀座
-                 <br>電話番号
-                 <br>〇〇〇〇-〇〇〇〇
-                 <br>営業時間
-                 <br>平日11:00-20:30　土・日・祝10：00-20：00
-   　            <br>定休日　月曜日　
-                 <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUgAONaPGqIKhEIiPdX-fL2kytpq0salo2ooMCIvT8R2dfyw/viewform">web予約</a>
-             </div>
+                <div class="親1"> 
+ 　　　　　　　                  <div class="店内1"><img src="jpg 店内 image 1.JPG" alt=""></div>
+　　　　　　　  </div>
+
+                <div class="親2"> 
+ 　　　　　　                    <div class="text1">
+                                                    住所
+                                                    <br>東京都中央区銀座
+                                                    <br>
+                                                    <br>電話番号
+                                                    <br>〇〇〇〇-〇〇〇〇
+                                                    <br>
+                                                    <br>営業時間
+                                                    <br>平日11:00-20:30　土・日・祝10：00-20：00
+   　                                               <br>定休日　月曜日
+                                                    <br>
+                                                    <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUgAONaPGqIKhEIiPdX-fL2kytpq0salo2ooMCIvT8R2dfyw/viewform">web予約</a>
+                                  </div>
       
-             <div class="店内2"> <img src="jpg 店内 image 2.JPG" alt="" class="店内2"> </div>
-　　　</div>
+                                 <div class="店内2"><img src="jpg 店内 image 2.JPG" alt=""></div>
+　         　　 </div>
 
-　　　　<div class="親2">  親2
- 　
-　　　</div>
+　　　　        <div class="親3">  
+ 　　　                       　<div class="ヘア1"><img src="jpg ヘアカタログ 4.jpg" alt=""></div>
+                                <div class="ヘア2"><img src="jpg ヘアカタログ 2.jpg" alt=""></div>
+ 　　　                       　<div class="ヘア3"><img src="jpg ヘアカタログ 3.JPG" alt=""></div> 
+ 　　　                       　<div class="ヘア4"><img src="jpg ヘアカタログ 1.JPG" alt=""></div> 
+　          　　</div>
    
-   　<div class="親2"> 
- 　　　　　　<div class="メニュー1"> <img src="jpg メニュー image 1.jpg" alt="" class="メニュー1"> </div>
-             <div class="text2">
-              menu
-               <br>カット＆シャンプー
-               <br>カラー
-               <br>パーマ
-             </div>
-　　　</div>
+　　　　        <div class="親3"> 
+                                <a id="menu"></a>
+ 　　　                       　<div class="メニュー1"><img src="jpg メニュー image 1.jpg" alt=""></div>
+ 　　　                       　<div class="text2">
+                                                   menu
+                                                   <br>
+                                                   <br>カット＆シャンプー
+                                                   <br>カラー
+                                                   <br>パーマ
+                               </div>
+　　　         </div>
    　　
-     　　<div class="親2"> 
- 　　　　　　<div class="emiko1"> <img src="jpg emiko image 1.JPG" alt="" class="emiko1"> </div>
-             <div class="text3"> 
-              スタイリスト
-              <br>emi
-              <br>
-              <br>ショート・ボブ・透明感カラーなど得意です
-              <br>お客様お一人お一人に合わせたシルエットをご提案します</div>
+     　　      <div class="親3"> 
+ 　　　　　　                   <div class="emiko1"><img src="jpg emiko image 1.JPG" alt=""></div>
+                                <div class="text3"> 
+                                                   スタイリスト
+                                                   <br>emi
+                                                   <br>
+                                                   <br>ショート・ボブ・透明感カラーなど得意です
+                                                   <br>お客様お一人お一人に合わせたシルエットをご提案します</div>
+　　　                           </div>
+   　　
+ 　　　　　　 <div class="親4"> 
+        　　　　　　           <div class="box10"> <a href="https://www.instagram.com/"><img src="PNGInstagram1.png" alt="" class="sns1"></a> </div>
+ 　　　　　　　　　　          <div class="box20"> <a href="https://www.instagram.com/"><img src="PNGInstagram1.png" alt="" class="sns2"></a> </div>
+                              <div class="text4">  ABOUT US </div>　 
+         　　　　　　　　　　　<div class="店内3"><img src="jpg 店内 image 3.JPG" alt=""></div>
+                               <div class="子8"></div>
 　　　        </div>
-   　　
-     　<div class="親2"> 
- 　　　　　　<div class="親2"> 
-        　　　　　　<div class="box10"> <a href="https://www.instagram.com/"><img src="PNGInstagram1.png" alt="" class="sns1"></a> </div>
- 　　　　　　　　　　<div class="box20"> <a href="https://www.instagram.com/"><img src="PNGInstagram1.png" alt="" class="sns2"></a> </div>
-       　　　</div>
-             <div class="子8"></div>
-　　　</div>
 
 </div>
    
-  </body>
+</body>
 
- </html>
+</html>
