--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                                                     <br>〇〇〇〇-〇〇〇〇
                                                     <br>
                                                     <br>営業時間
-                                                    <br>平日11:00-19:00　土曜日10：30-15：30
-   　                                               <br>定休日　月曜日
+                                                    <br>平日11:00-20:00　土曜日10:00-19:00
+   　                                               <br>定休日　月曜日/祝日　※日曜日不定休あり
                                                     <br>
                                                     <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUgAONaPGqIKhEIiPdX-fL2kytpq0salo2ooMCIvT8R2dfyw/viewform">web予約</a>
                                   </div>
@@ -63,9 +63,12 @@ src="jpg ヘアカタログ 2.jpg" class="ヘア5">
  　　　                       　<div class="text2">
                                                    menu
                                                    <br>
-                                                   <br>カット＆シャンプー
-                                                   <br>カラー
-                                                   <br>パーマ
+                                                   <br>カット¥6.600
+                                                   <br>カラー¥8.800
+                                                   <br>(デザインカラー別途料金)
+                                                   <br>パーマ¥8.800〜
+                                                   <br>トリートメント¥4.400〜
+                                                   <br>縮毛矯正¥13.000〜
                                </div>
 　　　         </div>
    　　
@@ -75,8 +78,7 @@ src="jpg ヘアカタログ 2.jpg" class="ヘア5">
                                                    スタイリスト
                                                    <br>emi
                                                    <br>
-                                                   <br>ショート・ボブ・透明感カラーなど得意です
-                                                   <br>お客様お一人お一人に合わせたシルエットをご提案します</div>
+                                                   <br>なるべく施術の説明をするように心がけてます。</div>
 　　　                           </div>
    　　
  　　　　　　 <div class="親4"> 
@@ -89,7 +91,8 @@ src="jpg ヘアカタログ 2.jpg" class="ヘア5">
                               <div class="box40"> <a href="https://twitter.com/login?lang=ja"><img src="PNGtwitter1.png" class="sns4"></a> </div>
          　　　　　　　　　　　<!-- 候補1　https://access.line.me/oauth2/v2.1/authorize/consent -->
          　　　　　　　　　　　<!-- 候補2　https://access.line.me/dialog/oauth/weblogin?client_id=1459630796 -->　
-                              <div class="text4">  ABOUT US </div>　 
+                              <div class="text4">  ABOUT US </div>　
+         　　　　　　　　　　　<br>「楽しく丁寧に」がモットーです。日常の髪型に少しお洒落を取り入れたスタイル提案します。
          　　　　　　　　　　　<div class="店内3"><img src="jpg 店内 image 3.JPG" alt=""></div>
                                <div class="子8"></div>
 　　　        </div>
