--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ src="jpg ヘアカタログ 2.jpg" class="ヘア5">
          　　　　　　　　　　　<!-- 候補1　https://access.line.me/oauth2/v2.1/authorize/consent -->
          　　　　　　　　　　　<!-- 候補2　https://access.line.me/dialog/oauth/weblogin?client_id=1459630796 -->　
                               <div class="text4">  ABOUT US </div>　
-         　　　　　　　　　　　<br>「楽しく丁寧に」がモットーです。日常の髪型に少しお洒落を取り入れたスタイル提案します。
+         　　　　　　　　　　　<div class="text5"> 「楽しく丁寧に」がモットーです。
+                     　　　　　<br>日常の髪型に少しお洒落を取り入れたスタイル提案します。</div>　
          　　　　　　　　　　　<div class="店内3"><img src="jpg 店内 image 3.JPG" alt=""></div>
                                <div class="子8"></div>
 　　　        </div>
