--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                                     <br>東京都中央区銀座
                                                     <br>
                                                     <br>電話番号
-                                                    <br>〇〇〇〇-〇〇〇〇
+                                                    <br>〇〇〇-〇〇〇〇-〇〇〇〇
                                                     <br>
                                                     <br>営業時間
                                                     <br>平日11:00-20:00　土曜日10:00-19:00
@@ -91,9 +91,8 @@ src="jpg ヘアカタログ 2.jpg" class="ヘア5">
                               <div class="box40"> <a href="https://twitter.com/login?lang=ja"><img src="PNGtwitter1.png" class="sns4"></a> </div>
          　　　　　　　　　　　<!-- 候補1　https://access.line.me/oauth2/v2.1/authorize/consent -->
          　　　　　　　　　　　<!-- 候補2　https://access.line.me/dialog/oauth/weblogin?client_id=1459630796 -->　
-                              <div class="text4">  ABOUT US </div>　
-         　　　　　　　　　　　<div class="text5"> 「楽しく丁寧に」がモットーです。
-                     　　　　　<br>日常の髪型に少しお洒落を取り入れたスタイル提案します。</div>　
+                              <div class="text4"> <a href="https://be11be11.github.io/ABOUTUS/">ABOUT US</a> </div>
+       　　　　　　　
          　　　　　　　　　　　<div class="店内3"><img src="jpg 店内 image 3.JPG" alt=""></div>
                                <div class="子8"></div>
 　　　        </div>
